@@ -5767,6 +5767,8 @@ static void generate_cpu (int id, int mode)
 	char fname[100];
 	const char *extra, *extraup;
 	static int postfix2 = -1;
+	static int postfix3 = -1;
+	static int close_id = -1;
 	int rp;
 #ifdef FSUAE
 	int close_ifdef = false;
@@ -5782,6 +5784,9 @@ static void generate_cpu (int id, int mode)
 
 	postfix = id;
 	if (id == 0 || id == 11 || id == 13 || id == 20 || id == 21 || id == 22 || id == 23 || id == 24 || id == 31 || id == 32 || id == 33 || id == 40 || id == 50) {
+		if (close_id > -1) {
+			fprintf (stdout, "\n#endif /* CPUEMU_%d%s */\n", close_id, extraup);
+		}
 		if (generate_stbl)
 			fprintf (stblfile, "#ifdef CPUEMU_%d%s\n", postfix, extraup);
 		postfix2 = postfix;
@@ -5790,14 +5795,30 @@ static void generate_cpu (int id, int mode)
 			abort ();
 		}
 		generate_includes (stdout, id);
+		fprintf (stdout, "\n#ifdef CPUEMU_%d%s\n\n", postfix, extraup);
+		close_id = id;
 #ifdef FSUAE
 		// since the code is auto-generated by template functions, many
 		// variables are unused in the generated code
 		fprintf (stdout, "#pragma GCC diagnostic ignored \"-Wunused-variable\"\n");
 		// clang analyzer spends ages on these files...
-		fprintf (stdout, "#ifndef __clang_analyzer__\n");
+		fprintf (stdout, "#if !defined __clang_analyzer__\n");
 		close_ifdef = true;
 #endif
+	} else if (id == 1 || id == 2 || id == 3 || id == 4 || id == 5) {
+		postfix3 = 0;
+	} else if (id == 12) {
+		postfix3 = 11;
+	} else if (id == 25) {
+		postfix3 = 25;
+	} else if (id == 41 || id == 42 || id == 43 || id == 44 || id == 45) {
+		postfix3 = 40;
+	} else if (id == 51 || id == 52 || id == 53 || id == 54 || id == 55) {
+		postfix3 = 50;
+	}
+	if (postfix3 >= 0) {
+		if (generate_stbl)
+			fprintf (stblfile, "#ifdef CPUEMU_%d%s\n", postfix3, extraup);
 	}
 
 	using_exception_3 = 1;
@@ -5929,13 +5950,19 @@ static void generate_cpu (int id, int mode)
 			fprintf (stblfile, "#endif /* CPUEMU_68000_ONLY */\n");
 		if (postfix2 >= 0)
 			fprintf (stblfile, "#endif /* CPUEMU_%d%s */\n", postfix2, extraup);
+		if (postfix3 >= 0)
+			fprintf (stblfile, "#endif /* CPUEMU_%d%s */\n", postfix3, extraup);
 	}
-	postfix2 = -1;
+	if (id == 55) {
+		fprintf (stdout, "\n#endif /* CPUEMU_%d%s */\n", postfix2, extraup);
+	}
 #ifdef FSUAE
 	if (close_ifdef) {
-		fprintf (stdout, "#endif // not __clang_analyzer__\n");
+		fprintf (stdout, "#endif /* !defined __clang_analyzer__*/\n");
 	}
 #endif
+	postfix2 = -1;
+	postfix3 = -1;
 }
 
 int main(int argc, char *argv[])
