@@ -53,20 +53,6 @@ extern FILE *g_fs_uae_sync_debug_file;
 // is needed by code
 
 #define ECS_DENISE
-#define CPUEMU_0 /* generic 680x0 emulation */
-#define CPUEMU_11 /* 68000/68010 prefetch emulation */
-#define CPUEMU_13 /* 68000/68010 cycle-exact cpu&blitter */
-#define CPUEMU_20 /* 68020 prefetch */
-#define CPUEMU_21 /* 68020 "cycle-exact" + blitter */
-#define CPUEMU_22 /* 68030 prefetch */
-#define CPUEMU_23 /* 68030 "cycle-exact" + blitter */
-#define CPUEMU_24 /* 68060 "cycle-exact" + blitter */
-#define CPUEMU_25 /* 68040 "cycle-exact" + blitter */
-#define CPUEMU_31 /* Aranym 68040 MMU */
-#define CPUEMU_32 /* Previous 68030 MMU */
-#define CPUEMU_33 /* 68060 MMU */
-#define CPUEMU_40 /* generic 680x0 with JIT direct memory access */
-#define CPUEMU_50 /* generic 680x0 with indirect memory access */
 //#define ENFORCER
 #define GFXFILTER
 
@@ -74,11 +60,8 @@ extern FILE *g_fs_uae_sync_debug_file;
 #define MMUEMU /* Aranym 68040 MMU */
 //#define MULTIDISPLAY 1
 #define NATMEM_OFFSET natmem_offset
-#define NCR
 #define FULLMMU /* Aranym 68040 MMU */
-#define SCSIEMU
 #define SUPPORT_THREADS
-#define UAESERIAL
 #define UAE_FILESYS_THREADS
 //#define UAE_FILESYS_ASYNCHRONOUS
 //#define USE_SDL
