@@ -708,8 +708,10 @@ void restore_state (const TCHAR *filename)
 		else if (!_tcscmp (name, _T("SCS4")))
 			end = restore_scsi_device (WDTYPE_A2091_2, chunk);
 #endif
+#ifdef SCSIEMU
 		else if (!_tcscmp (name, _T("SCSD")))
 			end = restore_scsidev (chunk);
+#endif
 		else if (!_tcscmp (name, _T("GAYL")))
 			end = restore_gayle (chunk);
 		else if (!_tcscmp (name, _T("IDE ")))
@@ -1026,11 +1028,13 @@ static int save_state_internal (struct zfile *f, const TCHAR *description, int c
 		}
 	}
 #endif
+#ifdef SCSIEMU
 	for (i = 0; i < MAX_TOTAL_SCSI_DEVICES; i++) {
 		dst = save_scsidev (i, &len, NULL);
 		save_chunk (f, dst, len, _T("SCSD"), 0);
 		xfree (dst);
 	}
+#endif
 #ifdef ACTION_REPLAY
 	dst = save_action_replay (&len, NULL);
 	save_chunk (f, dst, len, _T("ACTR"), comp);
