@@ -10,6 +10,8 @@
 #include "sysconfig.h"
 #include "sysdeps.h"
 
+#ifdef SCSIEMU
+
 #include "config.h"
 #include "threaddep/thread.h"
 #include "options.h"
@@ -817,3 +819,4 @@ void scsidev_start_threads (void)
 #endif
 }
 
+#endif /* SCSIEMU */
