@@ -3,6 +3,7 @@ Version 2.7.4dev:
 * Fixed building with ./configure --disable-drivesound --disable-slirp
   --disable-prowizard --disable-cdtv --disable-savestate
   --disable-parallel-port and others.
+* Can build with many CPU emu cores disabled.
 * Some cleanup in the configure script.
 * Remove dependency on GLU.
 * Do not use built-in libmpeg2.
